--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -1,27 +1,40 @@
+* {
+  font-size: 35px;
+  margin: 15px;
+}
+
 body {
   background: #eee;
   font-family: sans-serif;
 }
 
 .card {
-  width: 400px;
-  background: #fff;
+  width: 80vw;
+  background: #ffff;
   margin: 16px auto;
+  padding: 8px;
 }
 
 .title {
   background: #e3f4ff;
+  padding: 30px 20px;
 }
 
 .content {
   background: #e3f4ff;
+  padding: 30px 20px;
 }
 
 .button-container {
   background: #e3f4ff;
+  padding: 15px 5px;
+  text-align: center;
 }
 
 button {
   background: white;
   border: 1px solid #eee;
+  display: block;
+  padding: 8px 24px;
+  margin: auto auto;
 }
