--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -12,6 +12,10 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+
+  display: flex;
+  padding: 8px;
+  align-items: center;
 }
 
 .profile-image {
@@ -45,4 +49,21 @@ a {
 
 ul {
   list-style-type: none;
+}
+
+.left-header {
+  display: flex;
+  margin-right: auto;
+}
+
+.right-header {
+  display: flex;
+  margin-left: auto;
+  gap: 18px;
+  align-items: center;
+}
+
+.links {
+  display: flex;
+  gap: 18px;
 }
