--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -24,3 +24,25 @@ img {
   justify-content: center;
   background: #eee;
 }
+
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 8px;
+  gap: 32px;
+}
+
+.info-container {
+  display: flex;
+  gap: 52px;
+  justify-content: space-around;
+}
+
+.info-container > * {
+  max-width: 200px;
+}
+
+body {
+  text-align: center;
+}
