--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -20,6 +20,11 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+
+
+  display: flex;
+  padding: 20px;
+  gap: 15px;
 }
 
 .icon {
@@ -66,4 +71,26 @@ button.cancel {
   background: white;
   border: 1px solid #ddd;
   color: royalblue;
+}
+
+.column2 {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
+.column2 > * {
+  display: flex;
+}
+
+.column2 .row1 {
+  justify-content: space-between;
+}
+
+.column2 .row3 {
+  gap: 15px;
+}
+
+.header {
+  font-size: 1.5rem;
 }
